infltion + minor template changes

--- a/calculators/compounding.html
+++ b/calculators/compounding.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -11,13 +12,10 @@
         <meta name="description" content="Калькуляторы сложного процента и сроков достижения финансовой независимости" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Калькуляторы сложного процента и сроков достижения финансовой независимости" />
-
     <meta property="og:type" content="website" />
 <meta property="og:title" content="Сложный процент" />
 <meta property="og:url" content="https://onfin.github.io/calculators/compounding" />
-
 
 
 
@@ -48,6 +46,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -55,7 +54,8 @@
             <h1>Сложный процент</h1>
             <div class="meta">
                     <p class="description">Калькуляторы сложного процента и сроков достижения финансовой независимости</p>
-                        <p> Обновлено: <time>2020-01-02</time> </p>
+                    <p> Обновлено: <time>2020-01-02</time> </p>
+
             </div>
         </header>
 
@@ -481,30 +481,27 @@
 </script>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/calculators/compounding&title=Сложный процент&description=Калькуляторы сложного процента и сроков достижения финансовой независимости" target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/calculators/compounding" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/calculators/compounding" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/calculators/compounding" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/calculators"> &uarr; Калькуляторы &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-    </div>
+    <div class="pure-u-1-3 left"></div>
+    <div class="pure-u-1-3 center"><a href="/calculators"> &uarr; Калькуляторы &uarr; </a></div>
+    <div class="pure-u-1-3 right"></div>
     </div>
 </div>
 </div>
