--- a/calculators/credits.html
+++ b/calculators/credits.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="калькулятор, кредит, аннуитетная схема, дифференцированная схема, сравнение схем погашения, кредит и инфляция" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Калькуляторы для расчёта, сравнения и выбра различных схем выплаты кредитов. Насколько выгоднее или невыгоднее взять кредит и вложить по сравнению с постепенным накоплением." />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-13" />
         <meta property="og:article:modified_time" content="2019-10-14" />
 <meta property="og:title" content="Калькуляторы кредитов" />
 <meta property="og:url" content="https://onfin.github.io/calculators/credits" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Калькуляторы кредитов</h1>
             <div class="meta">
                     <p class="description">Калькуляторы для расчёта, сравнения и выбра различных схем выплаты кредитов. Насколько выгоднее или невыгоднее взять кредит и вложить по сравнению с постепенным накоплением.</p>
-                        <p> Обновлено: <time>2019-10-14</time> </p>
+                    <p> Обновлено: <time>2019-10-14</time> </p>
+
             </div>
         </header>
 
@@ -331,30 +331,27 @@
 </script>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/calculators/credits&title=Калькуляторы кредитов&description=Калькуляторы для расчёта, сравнения и выбра различных схем выплаты кредитов. Насколько выгоднее или невыгоднее взять кредит и вложить по сравнению с постепенным накоплением." target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/calculators/credits" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/calculators/credits" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/calculators/credits" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/calculators"> &uarr; Калькуляторы &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-    </div>
+    <div class="pure-u-1-3 left"></div>
+    <div class="pure-u-1-3 center"><a href="/calculators"> &uarr; Калькуляторы &uarr; </a></div>
+    <div class="pure-u-1-3 right"></div>
     </div>
 </div>
 </div>
