--- a/literacy/basebank.html
+++ b/literacy/basebank.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="финансовая грамотность, банки, вклады, денежные переводы" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="В чём роль и важность базового банка? Как его правильно выбирать?" />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-11" />
         <meta property="og:article:modified_time" content="2019-11-09" />
 <meta property="og:title" content="Выбор базового банка" />
 <meta property="og:url" content="https://onfin.github.io/literacy/basebank" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Выбор базового банка</h1>
             <div class="meta">
                     <p class="description">В чём роль и важность базового банка? Как его правильно выбирать?</p>
-                        <p> Обновлено: <time>2019-11-09</time> </p>
+                    <p> Обновлено: <time>2019-11-09</time> </p>
+
             </div>
         </header>
 
@@ -72,32 +72,27 @@
 <p>Если базовый банк выполняет лишь функции <em>диспетчера оперативного резерва</em>, то особенных требований к его надёжности нет. Однако если вы выбрали на эту роль сомнительный банк, то разумно найти ещё один, удовлетворяющий требованиям базовости, и размесить часть резервов там.</p>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/basebank&title=Выбор базового банка&description=В чём роль и важность базового банка? Как его правильно выбирать?" target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/basebank" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/basebank" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/basebank" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/literacy/howto"> &lt;&lt; Пенсия своими силами. Пошаговое руководство </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/literacy"> &uarr; Грамотность &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-                <a href="/literacy/cardscalc"> Использование и расчёт банковских карт &gt;&gt; </a>
-    </div>
+    <div class="pure-u-1-3 left"><a href="/literacy/howto"> &lt;&lt; Пенсия своими силами. Пошаговое руководство </a></div>
+    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/literacy/cardscalc"> Использование и расчёт банковских карт &gt;&gt; </a></div>
     </div>
 </div>
 </div>
