--- a/literacy/cards.html
+++ b/literacy/cards.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="финансовая грамотность, банковские карты, дебетовые карты, кредитные карты, кэшбэк" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Как устроена банковская карта. Как банки зарабатывают на картах. Опасности при использовании карт. Виды дебетовых карт. Откуда берётся кэшбэк. Как правильно и выгодно пользоваться кредитными картами." />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-12" />
         <meta property="og:article:modified_time" content="2019-10-14" />
 <meta property="og:title" content="Банковские карты" />
 <meta property="og:url" content="https://onfin.github.io/literacy/cards" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Банковские карты</h1>
             <div class="meta">
                     <p class="description">Как устроена банковская карта. Как банки зарабатывают на картах. Опасности при использовании карт. Виды дебетовых карт. Откуда берётся кэшбэк. Как правильно и выгодно пользоваться кредитными картами.</p>
-                        <p> Обновлено: <time>2019-10-14</time> </p>
+                    <p> Обновлено: <time>2019-10-14</time> </p>
+
             </div>
         </header>
 
@@ -124,32 +124,27 @@
 <p>Банки неохотно делятся информацией сколько клиентов использует кредитку правильно — не платя банку комиссий (кроме годового обслуживания, если есть) и процентов, — но проскакивает информация что не более 30%. Выгода банков, при таких процентах, колоссальная и на привлечение новых пользователей кредиток денег не жалеют. А свою выгоду посчитаем на <a href="/literacy/cardscalc">практике</a>.</p>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/cards&title=Банковские карты&description=Как устроена банковская карта. Как банки зарабатывают на картах. Опасности при использовании карт. Виды дебетовых карт. Откуда берётся кэшбэк. Как правильно и выгодно пользоваться кредитными картами." target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/cards" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/cards" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/cards" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/literacy/deposits"> &lt;&lt; Размещение средств в банках </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/literacy"> &uarr; Грамотность &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-                <a href="/literacy/instruments"> Краткий обзор инструментов сбережения. Сколько и во что вкладывать &gt;&gt; </a>
-    </div>
+    <div class="pure-u-1-3 left"><a href="/literacy/deposits"> &lt;&lt; Размещение средств в банках </a></div>
+    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/literacy/instruments"> Краткий обзор инструментов сбережения. Сколько и во что вкладывать &gt;&gt; </a></div>
     </div>
 </div>
 </div>
