--- a/literacy/instruments.html
+++ b/literacy/instruments.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="финансовая грамотность, риск и доходность, пассивный доход, паритет рисков, виды рисков, профиль рисков, особенности и риски финансовых активов, инфляция и девальвация, наличные, валюта, вклады, облигации, золото, недвижимость, акции, паевые и биржевые фонды" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Нет доходности без риска. Особенности, риски и историческая доходность наличных денег, вкладов в рублях и долларах, облигаций (ОФЗ), золота, недвижимости, российских и американских акций. Что такое паевые и биржевые (ETF) фонды. Проблемы российских фондов. Неэффективность активно управляемых фондов." />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-02-24" />
         <meta property="og:article:modified_time" content="2019-11-17" />
 <meta property="og:title" content="Краткий обзор инструментов сбережения. Сколько и во что вкладывать" />
 <meta property="og:url" content="https://onfin.github.io/literacy/instruments" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Краткий обзор инструментов сбережения. Сколько и во что вкладывать</h1>
             <div class="meta">
                     <p class="description">Нет доходности без риска. Особенности, риски и историческая доходность наличных денег, вкладов в рублях и долларах, облигаций (ОФЗ), золота, недвижимости, российских и американских акций. Что такое паевые и биржевые (ETF) фонды. Проблемы российских фондов. Неэффективность активно управляемых фондов.</p>
-                        <p> Обновлено: <time>2019-11-17</time> </p>
+                    <p> Обновлено: <time>2019-11-17</time> </p>
+
             </div>
         </header>
 
@@ -216,32 +216,27 @@
 <p>Важное свойство общерыночного риска — обоюдоострость, причём опаснее та сторона, что завышает стоимость активов выше справедливой. Потому что мы можем не продавать доходные активы себе в убыток, но вот вероятность купить их по ценам, которые приведут к отрицательной доходности на ближайшие пару десятилетий (как американские акции в 2000 или российские в 2008) — есть всегда, и её реализации надо старательно избегать.</p>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/instruments&title=Краткий обзор инструментов сбережения. Сколько и во что вкладывать&description=Нет доходности без риска. Особенности, риски и историческая доходность наличных денег, вкладов в рублях и долларах, облигаций (ОФЗ), золота, недвижимости, российских и американских акций. Что такое паевые и биржевые (ETF) фонды. Проблемы российских фондов. Неэффективность активно управляемых фондов." target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/instruments" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/instruments" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/instruments" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/literacy/cards"> &lt;&lt; Банковские карты </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/literacy"> &uarr; Грамотность &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-                <a href="/literacy/taxes"> Брокерский счёт: как рассчитываются и уплачиваются налоги &gt;&gt; </a>
-    </div>
+    <div class="pure-u-1-3 left"><a href="/literacy/cards"> &lt;&lt; Банковские карты </a></div>
+    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/literacy/taxes"> Брокерский счёт: как рассчитываются и уплачиваются налоги &gt;&gt; </a></div>
     </div>
 </div>
 </div>
