--- a/literacy/instruments/deposits2.html
+++ b/literacy/instruments/deposits2.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="финансовая грамотность, банковские счета, вклады, риски, доходность, валютные вклады, АСВ, проверка банка" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Риски и доходность банковских вкладов" />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-01-02" />
         <meta property="og:article:modified_time" content="2020-01-04" />
 <meta property="og:title" content="Банковские счета, карты и вклады" />
 <meta property="og:url" content="https://onfin.github.io/literacy/instruments/deposits2" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Банковские счета, карты и вклады</h1>
             <div class="meta">
                     <p class="description">Риски и доходность банковских вкладов</p>
-                        <p> Обновлено: <time>2020-01-04</time> </p>
+                    <p> Обновлено: <time>2020-01-04</time> </p>
+
             </div>
         </header>
 
@@ -82,32 +82,27 @@
 <p><a href="https://www.banki.ru/products/deposits/">Поиск вкладов</a> (всегда внимательно читайте условия вклада на сайте банка), оценка надёжности банков: <a href="http://kuap.ru/">Куап</a>, <a href="http://www.analizbankov.ru/">Анализ банков</a>.</p>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/instruments/deposits2&title=Банковские счета, карты и вклады&description=Риски и доходность банковских вкладов" target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/instruments/deposits2" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/instruments/deposits2" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/instruments/deposits2" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/literacy/instruments/cash"> &lt;&lt; Наличные деньги </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/literacy"> &uarr; Грамотность &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-                <a href="/literacy/instruments/bonds"> Облигации &gt;&gt; </a>
-    </div>
+    <div class="pure-u-1-3 left"><a href="/literacy/instruments/cash"> &lt;&lt; Наличные деньги </a></div>
+    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/literacy/instruments/bonds"> Облигации &gt;&gt; </a></div>
     </div>
 </div>
 </div>
