--- a/literacy/money_inflation_wages.html
+++ b/literacy/money_inflation_wages.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -10,13 +11,9 @@
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
 
 <meta property="og:locale" content="ru" />
-
-
     <meta property="og:type" content="website" />
 <meta property="og:title" content="Деньги, инфляция и зарплаты" />
 <meta property="og:url" content="https://onfin.github.io/literacy/money_inflation_wages" />
-
-
         <script>
             MathJax = {
                 tex: {
@@ -30,6 +27,8 @@
             };
         </script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+
+
 
 
 </head>
@@ -59,13 +58,15 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
         <header>
             <h1>Деньги, инфляция и зарплаты</h1>
             <div class="meta">
-                        <p> Обновлено: <time>2019-10-14</time> </p>
+                    <p> Обновлено: <time>2019-10-14</time> </p>
+
             </div>
         </header>
 
@@ -106,31 +107,27 @@ $$ Q_1 \cdot P_1 + Q_2 \cdot P_2 = M \cdot V, $$
 </ul>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/money_inflation_wages&title=Деньги, инфляция и зарплаты&description=" target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/money_inflation_wages" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/money_inflation_wages" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/money_inflation_wages" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/literacy/reserves"> &lt;&lt; Формирование резервов </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/literacy"> &uarr; Грамотность &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-    </div>
+    <div class="pure-u-1-3 left"><a href="/literacy/reserves"> &lt;&lt; Формирование резервов </a></div>
+    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
+    <div class="pure-u-1-3 right"></div>
     </div>
 </div>
 </div>
