--- a/literacy/moneytransfer.html
+++ b/literacy/moneytransfer.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="финансовая грамотность, денежные переводы, межбанковские переводы, переводы по номеру карты, стягивание и выталкивание, снятие и зачисление наличных, транзитные операции" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Как правильно переводить деньги. Какие здесь есть возможности, риски и подводные камни. Как избежать обвинений в обналичке, транзите и отмывании." />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-09" />
-        <meta property="og:article:modified_time" content="2019-11-09" />
+        <meta property="og:article:modified_time" content="2020-01-15" />
 <meta property="og:title" content="Денежные переводы" />
 <meta property="og:url" content="https://onfin.github.io/literacy/moneytransfer" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Денежные переводы</h1>
             <div class="meta">
                     <p class="description">Как правильно переводить деньги. Какие здесь есть возможности, риски и подводные камни. Как избежать обвинений в обналичке, транзите и отмывании.</p>
-                        <p> Обновлено: <time>2019-11-09</time> </p>
+                    <p> Обновлено: <time>2020-01-15</time> </p>
+
             </div>
         </header>
 
@@ -171,32 +171,27 @@
 <p>Если вы в самом деле не занимаетесь никакой противозаконной деятельностью, соблюдать эти правила нетрудно.</p>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/moneytransfer&title=Денежные переводы&description=Как правильно переводить деньги. Какие здесь есть возможности, риски и подводные камни. Как избежать обвинений в обналичке, транзите и отмывании." target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/moneytransfer" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/moneytransfer" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/moneytransfer" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/literacy/brokers"> &lt;&lt; Как выбрать брокера </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/literacy"> &uarr; Грамотность &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-                <a href="/literacy/deposits"> Размещение средств в банках &gt;&gt; </a>
-    </div>
+    <div class="pure-u-1-3 left"><a href="/literacy/brokers"> &lt;&lt; Как выбрать брокера </a></div>
+    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/literacy/deposits"> Размещение средств в банках &gt;&gt; </a></div>
     </div>
 </div>
 </div>
