--- a/notes/diversification_math2/index.html
+++ b/notes/diversification_math2/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="финансовая грамотность, фондовый рынок, акции, облигации, диверсификация, ребалансировка, портфель, риск, доходность" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Как разное определение финансовых рисков может менять оптимальное для инвестора соотношение активов в портфеле." />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-12-07" />
         <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Математика диверсификации-2: доходность и риск" />
 <meta property="og:url" content="https://onfin.github.io/notes/diversification_math2" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Математика диверсификации-2: доходность и риск</h1>
             <div class="meta">
                     <p class="description">Как разное определение финансовых рисков может менять оптимальное для инвестора соотношение активов в портфеле.</p>
-                        <p> Обновлено: <time>2019-12-29</time> </p>
+                    <p> Обновлено: <time>2019-12-29</time> </p>
+
             </div>
         </header>
 
@@ -93,32 +93,27 @@
 <p>Ссылки на исходные данные в начале статьи, <a href="/notes/diversification_math2/risk.py">код для расчёта и построения графиков</a>.</p>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/diversification_math2&title=Математика диверсификации-2: доходность и риск&description=Как разное определение финансовых рисков может менять оптимальное для инвестора соотношение активов в портфеле." target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/notes/diversification_math2" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/diversification_math2" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/diversification_math2" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/notes/diversification_math"> &lt;&lt; Математика диверсификации: портфельный эффект и ребалансировка между акциями </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/notes"> &uarr; Заметки о финансах &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-                <a href="/notes/fairprice"> Справедливая цена &gt;&gt; </a>
-    </div>
+    <div class="pure-u-1-3 left"><a href="/notes/diversification_math"> &lt;&lt; Математика диверсификации: портфельный эффект и ребалансировка между акциями </a></div>
+    <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/notes/inflation"> Инфляция &gt;&gt; </a></div>
     </div>
 </div>
 </div>
