--- a/notes/finplan.html
+++ b/notes/finplan.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="финансовая грамотность, личный финансовый план, сбережения" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Составление личного финансового плана ничего не даёт кроме потери сил и времени (а иногда и денег, если вы ради него пошли к консультанту). Правильный подход — организовать свою финансовую систему так, чтобы она всегда и автоматически отражала ваши планы." />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-30" />
         <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Личный финансовый план — не нужен" />
 <meta property="og:url" content="https://onfin.github.io/notes/finplan" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Личный финансовый план — не нужен</h1>
             <div class="meta">
                     <p class="description">Составление личного финансового плана ничего не даёт кроме потери сил и времени (а иногда и денег, если вы ради него пошли к консультанту). Правильный подход — организовать свою финансовую систему так, чтобы она всегда и автоматически отражала ваши планы.</p>
-                        <p> Обновлено: <time>2019-12-29</time> </p>
+                    <p> Обновлено: <time>2019-12-29</time> </p>
+
             </div>
         </header>
 
@@ -84,32 +84,27 @@
 <p>Ещё одно бесполезное упражнение от советников — оценка своего финансового положения, которое заключается в выписывании рыночной стоимости всех имуществ и объёма всех долгов. Я даже не думаю, что таким образом можно напугать человека, у которого ипотечная квартира и дорогая кредитная машина, а все доходы он проматывает. Он в курсе. Остальным это тем более незачем.</p>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/finplan&title=Личный финансовый план — не нужен&description=Составление личного финансового плана ничего не даёт кроме потери сил и времени (а иногда и денег, если вы ради него пошли к консультанту). Правильный подход — организовать свою финансовую систему так, чтобы она всегда и автоматически отражала ваши планы." target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/notes/finplan" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/finplan" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/finplan" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/notes/recklessness"> &lt;&lt; Безответственное отношение к деньгам </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/notes"> &uarr; Заметки о финансах &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-                <a href="/notes/lifeprofile"> Финансовый профиль жизни обычного человека и инвестора &gt;&gt; </a>
-    </div>
+    <div class="pure-u-1-3 left"><a href="/notes/recklessness"> &lt;&lt; Безответственное отношение к деньгам </a></div>
+    <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/notes/lifeprofile"> Финансовый профиль жизни обычного человека и инвестора &gt;&gt; </a></div>
     </div>
 </div>
 </div>
