--- a/calculators/cards.html
+++ b/calculators/cards.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="банковские карты, дебетовые карты, кредитные карты, кэшбэк, расчёт выгоды, калькулятор" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Калькуляторы для расчёта выгоды, сравнения и выбора банковских карт." />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-13" />
         <meta property="og:article:modified_time" content="2019-10-17" />
 <meta property="og:title" content="Калькуляторы банковских карт" />
 <meta property="og:url" content="https://onfin.github.io/calculators/cards" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Калькуляторы банковских карт</h1>
             <div class="meta">
                     <p class="description">Калькуляторы для расчёта выгоды, сравнения и выбора банковских карт.</p>
-                        <p> Обновлено: <time>2019-10-17</time> </p>
+                    <p> Обновлено: <time>2019-10-17</time> </p>
+
             </div>
         </header>
 
@@ -255,30 +255,27 @@
 </script>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/calculators/cards&title=Калькуляторы банковских карт&description=Калькуляторы для расчёта выгоды, сравнения и выбора банковских карт." target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/calculators/cards" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/calculators/cards" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/calculators/cards" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/calculators"> &uarr; Калькуляторы &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-    </div>
+    <div class="pure-u-1-3 left"></div>
+    <div class="pure-u-1-3 center"><a href="/calculators"> &uarr; Калькуляторы &uarr; </a></div>
+    <div class="pure-u-1-3 right"></div>
     </div>
 </div>
 </div>
