--- a/literacy/aboutmoney.html
+++ b/literacy/aboutmoney.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -10,12 +11,9 @@
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
 
 <meta property="og:locale" content="ru" />
-
-
     <meta property="og:type" content="website" />
 <meta property="og:title" content="Про деньги" />
 <meta property="og:url" content="https://onfin.github.io/literacy/aboutmoney" />
-
 
 
 
@@ -46,13 +44,15 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
         <header>
             <h1>Про деньги</h1>
             <div class="meta">
-                        <p> Обновлено: <time>2019-10-14</time> </p>
+                    <p> Обновлено: <time>2019-10-14</time> </p>
+
             </div>
         </header>
 
@@ -72,31 +72,27 @@
 <p>где $P_B$ и $P_G$ это цены сапог и зерна уже «в деньгах», $M + \Delta S$ — количество денег, которое у крестьян было «в обороте» + то, что достали из кубышек (или убрали в них, тогда $\Delta S &lt; 0$), а $V$ — это сколько раз эти деньги за время ярмарки обернулись.</p>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/aboutmoney&title=Про деньги&description=" target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/aboutmoney" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/aboutmoney" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/aboutmoney" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/literacy/reserves"> &lt;&lt; Формирование резервов </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/literacy"> &uarr; Грамотность &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-    </div>
+    <div class="pure-u-1-3 left"><a href="/literacy/reserves"> &lt;&lt; Формирование резервов </a></div>
+    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
+    <div class="pure-u-1-3 right"></div>
     </div>
 </div>
 </div>
