--- a/literacy/brokers.html
+++ b/literacy/brokers.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="финансовая грамотность, фондовый рынок, брокеры, тарифы брокеров, таблица брокеров" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="На что смотреть и на что не смотреть при выборе брокера. Основные виды комиссий брокеров. Сравнение комиссий  брокеров." />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-12-16" />
         <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Как выбрать брокера" />
 <meta property="og:url" content="https://onfin.github.io/literacy/brokers" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Как выбрать брокера</h1>
             <div class="meta">
                     <p class="description">На что смотреть и на что не смотреть при выборе брокера. Основные виды комиссий брокеров. Сравнение комиссий  брокеров.</p>
-                        <p> Обновлено: <time>2019-12-29</time> </p>
+                    <p> Обновлено: <time>2019-12-29</time> </p>
+
             </div>
         </header>
 
@@ -505,32 +505,27 @@
 <p><a href="https://www.banki.ru/forum/?PAGE_NAME=list&amp;FID=21">На форуме склянок</a></p>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/brokers&title=Как выбрать брокера&description=На что смотреть и на что не смотреть при выборе брокера. Основные виды комиссий брокеров. Сравнение комиссий  брокеров." target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/brokers" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/brokers" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/brokers" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/literacy/credits"> &lt;&lt; Математика кредитов </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/literacy"> &uarr; Грамотность &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-                <a href="/literacy/moneytransfer"> Денежные переводы &gt;&gt; </a>
-    </div>
+    <div class="pure-u-1-3 left"><a href="/literacy/credits"> &lt;&lt; Математика кредитов </a></div>
+    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/literacy/moneytransfer"> Денежные переводы &gt;&gt; </a></div>
     </div>
 </div>
 </div>
