--- a/literacy/cardscalc.html
+++ b/literacy/cardscalc.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="финансовая грамотность, банковские карты, дебетовые карты, кредитные карты, кэшбэк, выбор банковской карты, сравнение банковских карт, расчёт выгоды от использования карты" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Выгоды и опасности банковских карт. Как правильно выбрать и использовать банковскую карту. Стратегия набора веера карт. Расчёт выгоды от использования дебетовых и кредитных карт." />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-14" />
         <meta property="og:article:modified_time" content="2019-11-19" />
 <meta property="og:title" content="Использование и расчёт банковских карт" />
 <meta property="og:url" content="https://onfin.github.io/literacy/cardscalc" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Использование и расчёт банковских карт</h1>
             <div class="meta">
                     <p class="description">Выгоды и опасности банковских карт. Как правильно выбрать и использовать банковскую карту. Стратегия набора веера карт. Расчёт выгоды от использования дебетовых и кредитных карт.</p>
-                        <p> Обновлено: <time>2019-11-19</time> </p>
+                    <p> Обновлено: <time>2019-11-19</time> </p>
+
             </div>
         </header>
 
@@ -249,32 +249,27 @@
 <p>Единственный способ закрыть карту — написать в банке соответствующее заявление (и лучше взять с собой подтверждающий документ). Ни оставление карты на полке, ни даже её блокировка не прекращают обслуживание банком счёта карты (блокировка действует только на стороне платёжной системы). Соответственно, все лимиты будут открытыми, а комиссии — списываться (возможно, в долг или овердрафт под проценты).</p>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/cardscalc&title=Использование и расчёт банковских карт&description=Выгоды и опасности банковских карт. Как правильно выбрать и использовать банковскую карту. Стратегия набора веера карт. Расчёт выгоды от использования дебетовых и кредитных карт." target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/cardscalc" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/cardscalc" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/cardscalc" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/literacy/basebank"> &lt;&lt; Выбор базового банка </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/literacy"> &uarr; Грамотность &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-                <a href="/literacy/credits"> Математика кредитов &gt;&gt; </a>
-    </div>
+    <div class="pure-u-1-3 left"><a href="/literacy/basebank"> &lt;&lt; Выбор базового банка </a></div>
+    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/literacy/credits"> Математика кредитов &gt;&gt; </a></div>
     </div>
 </div>
 </div>
