--- a/literacy/credits.html
+++ b/literacy/credits.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="финансовая грамотность, банки, кредиты, аннуитетная схема, дифференцированная схема, сравнение схем погашения, кредит и инфляция" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Теория и расчёт различных схем погашения кредитов. Какова реальная переплата по кредиту по той или иной схеме? Сколько стоит хранить в банке резерв на будущие платежи по кредиту? Сколько можно заработать, если вложить кредитные деньги?" />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-01-12" />
         <meta property="og:article:modified_time" content="2019-10-16" />
 <meta property="og:title" content="Математика кредитов" />
 <meta property="og:url" content="https://onfin.github.io/literacy/credits" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Математика кредитов</h1>
             <div class="meta">
                     <p class="description">Теория и расчёт различных схем погашения кредитов. Какова реальная переплата по кредиту по той или иной схеме? Сколько стоит хранить в банке резерв на будущие платежи по кредиту? Сколько можно заработать, если вложить кредитные деньги?</p>
-                        <p> Обновлено: <time>2019-10-16</time> </p>
+                    <p> Обновлено: <time>2019-10-16</time> </p>
+
             </div>
         </header>
 
@@ -98,32 +98,27 @@
 <p>Статья будет пополняться новыми разборами.</p>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/credits&title=Математика кредитов&description=Теория и расчёт различных схем погашения кредитов. Какова реальная переплата по кредиту по той или иной схеме? Сколько стоит хранить в банке резерв на будущие платежи по кредиту? Сколько можно заработать, если вложить кредитные деньги?" target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/credits" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/credits" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/credits" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/literacy/cardscalc"> &lt;&lt; Использование и расчёт банковских карт </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/literacy"> &uarr; Грамотность &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-                <a href="/literacy/brokers"> Как выбрать брокера &gt;&gt; </a>
-    </div>
+    <div class="pure-u-1-3 left"><a href="/literacy/cardscalc"> &lt;&lt; Использование и расчёт банковских карт </a></div>
+    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/literacy/brokers"> Как выбрать брокера &gt;&gt; </a></div>
     </div>
 </div>
 </div>
