--- a/literacy/deposits.html
+++ b/literacy/deposits.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,16 +13,12 @@
         <meta name="keywords" content="финансовая грамотность, банки, текущие счета, накопительные счета, вклады, депозиты, эффективная ставка, страховка АСВ" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Как правильно выбрать банковский вклад, какие бывают схемы начисления и выплаты процентов, расчёт эффективной процентной ставки (для сравнения схем), подводные камни вкладов." />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-19" />
         <meta property="og:article:modified_time" content="2020-01-02" />
 <meta property="og:title" content="Размещение средств в банках" />
 <meta property="og:url" content="https://onfin.github.io/literacy/deposits" />
-
-
         <script>
             MathJax = {
                 tex: {
@@ -35,6 +32,8 @@
             };
         </script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+
+
 
 
 </head>
@@ -64,6 +63,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -71,7 +71,8 @@
             <h1>Размещение средств в банках</h1>
             <div class="meta">
                     <p class="description">Как правильно выбрать банковский вклад, какие бывают схемы начисления и выплаты процентов, расчёт эффективной процентной ставки (для сравнения схем), подводные камни вкладов.</p>
-                        <p> Обновлено: <time>2020-01-02</time> </p>
+                    <p> Обновлено: <time>2020-01-02</time> </p>
+
             </div>
         </header>
 
@@ -138,32 +139,27 @@
 <p>Я смотрю аналитические отчёты по банкам на этих сервисах: <a href="http://kuap.ru/">Куап</a> — подробная финансовая отчётность и здоровье банков, <a href="http://www.analizbankov.ru/">Анализ банков</a> — то же, но есть аналитические отчёты по банкам на понятном простом обывателю языке <a href="http://www.analizbankov.ru/bank.php?BankId=tin-koff-bank-2673&amp;BankMenu=nadezhnost">например, Тиньков</a>.</p>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/deposits&title=Размещение средств в банках&description=Как правильно выбрать банковский вклад, какие бывают схемы начисления и выплаты процентов, расчёт эффективной процентной ставки (для сравнения схем), подводные камни вкладов." target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/deposits" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/deposits" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/deposits" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/literacy/moneytransfer"> &lt;&lt; Денежные переводы </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/literacy"> &uarr; Грамотность &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-                <a href="/literacy/cards"> Банковские карты &gt;&gt; </a>
-    </div>
+    <div class="pure-u-1-3 left"><a href="/literacy/moneytransfer"> &lt;&lt; Денежные переводы </a></div>
+    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/literacy/cards"> Банковские карты &gt;&gt; </a></div>
     </div>
 </div>
 </div>
