--- a/literacy/howto.html
+++ b/literacy/howto.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="осознанность, осознанное потребление, смысл денег, пассивный доход, риск, сбережения, инвестиции, личный финансовый план, учёт расходов, бюджет, фондовый рынок, облигации, акции, брокеры" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Правильное отношение к деньгам. Необходимость сбережений. Риск и доходность. Откуда берётся пассивный доход. Правила сбережений. Как учитывать и планировать расходы. Развитие финансовой дисциплины. Как и зачем создавать резервы. Правильный порядок закрытия кредитов. Что такое фондовый рынок, облигации и акции." />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-08-18" />
         <meta property="og:article:modified_time" content="2019-11-19" />
 <meta property="og:title" content="Пенсия своими силами. Пошаговое руководство" />
 <meta property="og:url" content="https://onfin.github.io/literacy/howto" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Пенсия своими силами. Пошаговое руководство</h1>
             <div class="meta">
                     <p class="description">Правильное отношение к деньгам. Необходимость сбережений. Риск и доходность. Откуда берётся пассивный доход. Правила сбережений. Как учитывать и планировать расходы. Развитие финансовой дисциплины. Как и зачем создавать резервы. Правильный порядок закрытия кредитов. Что такое фондовый рынок, облигации и акции.</p>
-                        <p> Обновлено: <time>2019-11-19</time> </p>
+                    <p> Обновлено: <time>2019-11-19</time> </p>
+
             </div>
         </header>
 
@@ -276,32 +276,27 @@ calcRetirement();
 </ol>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/howto&title=Пенсия своими силами. Пошаговое руководство&description=Правильное отношение к деньгам. Необходимость сбережений. Риск и доходность. Откуда берётся пассивный доход. Правила сбережений. Как учитывать и планировать расходы. Развитие финансовой дисциплины. Как и зачем создавать резервы. Правильный порядок закрытия кредитов. Что такое фондовый рынок, облигации и акции." target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/howto" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/howto" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/howto" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/literacy/stocks"> &lt;&lt; Акции и их смысл </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/literacy"> &uarr; Грамотность &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-                <a href="/literacy/basebank"> Выбор базового банка &gt;&gt; </a>
-    </div>
+    <div class="pure-u-1-3 left"><a href="/literacy/stocks"> &lt;&lt; Акции и их смысл </a></div>
+    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/literacy/basebank"> Выбор базового банка &gt;&gt; </a></div>
     </div>
 </div>
 </div>
