--- a/literacy/instruments/gold.html
+++ b/literacy/instruments/gold.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="финансовая грамотность, инструменты сбережения, золото, риски, доходность" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Виды, специфика, риски и доходность вложений в золото." />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-01-04" />
         <meta property="og:article:modified_time" content="2020-01-05" />
 <meta property="og:title" content="Золото" />
 <meta property="og:url" content="https://onfin.github.io/literacy/instruments/gold" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Золото</h1>
             <div class="meta">
                     <p class="description">Виды, специфика, риски и доходность вложений в золото.</p>
-                        <p> Обновлено: <time>2020-01-05</time> </p>
+                    <p> Обновлено: <time>2020-01-05</time> </p>
+
             </div>
         </header>
 
@@ -89,32 +89,27 @@
 <p>Учитывая колоссальное перепроизводство золота, я рассчитываю, что в перспективе оно должно обесцениться в десятки раз и не держу его ни в каком виде. Желающим диверсификации в этом направлении я рекомендую рассмотреть ETF на корзины драгоценных металлов и/или биржевых товаров в целом, но на российском рынке их нет.</p>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/instruments/gold&title=Золото&description=Виды, специфика, риски и доходность вложений в золото." target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/instruments/gold" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/instruments/gold" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/instruments/gold" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/literacy/instruments/bonds"> &lt;&lt; Облигации </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/literacy"> &uarr; Грамотность &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-                <a href="/literacy/instruments/realty"> Недвижимость &gt;&gt; </a>
-    </div>
+    <div class="pure-u-1-3 left"><a href="/literacy/instruments/bonds"> &lt;&lt; Облигации </a></div>
+    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/literacy/instruments/realty"> Недвижимость &gt;&gt; </a></div>
     </div>
 </div>
 </div>
