--- a/literacy/instruments/realty.html
+++ b/literacy/instruments/realty.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="финансовая грамотность, инструменты сбережения, недвижимость, риски, доходность" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Вложения в недвижимость — какова реальная доходность и риски." />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-01-07" />
         <meta property="og:article:modified_time" content="2020-01-07" />
 <meta property="og:title" content="Недвижимость" />
 <meta property="og:url" content="https://onfin.github.io/literacy/instruments/realty" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Недвижимость</h1>
             <div class="meta">
                     <p class="description">Вложения в недвижимость — какова реальная доходность и риски.</p>
-                        <p> Обновлено: <time>2020-01-07</time> </p>
+                    <p> Обновлено: <time>2020-01-07</time> </p>
+
             </div>
         </header>
 
@@ -118,31 +118,27 @@
 <p>Если вас привлекает какой-то отдельный сегмент, можно купить долю в недвижимости под управлением конкретной УК — REIT. Но в этом случае вы подписываетесь под операционные риски данной конкретной УК, которые сопоставимы с рисками отдельного объекта недвижимости (хотя в случае REIT ваша ожидаемая доходность будет всё-таки выше — из-за того, что рынок оценивает и включает эти риски в стоимость пая, что проблематично на неликвидном рынке непосредственно недвижимости), поэтому я бы всё-таки рекомендовал ETF — фонды из множества REIT'ов.</p>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/instruments/realty&title=Недвижимость&description=Вложения в недвижимость — какова реальная доходность и риски." target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/instruments/realty" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/instruments/realty" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/instruments/realty" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/literacy/instruments/gold"> &lt;&lt; Золото </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/literacy"> &uarr; Грамотность &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-    </div>
+    <div class="pure-u-1-3 left"><a href="/literacy/instruments/gold"> &lt;&lt; Золото </a></div>
+    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
+    <div class="pure-u-1-3 right"></div>
     </div>
 </div>
 </div>
