--- a/literacy/intro.html
+++ b/literacy/intro.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,16 +13,12 @@
         <meta name="keywords" content="финансовая грамотность, сбережения, инвестиции, пенсия, риски, финансовый капитал, сложный процент, расчёт" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Для кого этот сайт. Зачем нужно накапливать финансовый капитал. Историческая доходность акций. Расчёт итоговой доходности разового вложения, регулярных вложений. Сколько нужно сберегать, чтобы получить нужный доход. Через сколько лет можно достичь финансовой независимости." />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-16" />
         <meta property="og:article:modified_time" content="2019-11-19" />
 <meta property="og:title" content="Введение" />
 <meta property="og:url" content="https://onfin.github.io/literacy/intro" />
-
-
         <script>
             MathJax = {
                 tex: {
@@ -35,6 +32,8 @@
             };
         </script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+
+
 
 
 </head>
@@ -64,6 +63,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -71,7 +71,8 @@
             <h1>Введение</h1>
             <div class="meta">
                     <p class="description">Для кого этот сайт. Зачем нужно накапливать финансовый капитал. Историческая доходность акций. Расчёт итоговой доходности разового вложения, регулярных вложений. Сколько нужно сберегать, чтобы получить нужный доход. Через сколько лет можно достичь финансовой независимости.</p>
-                        <p> Обновлено: <time>2019-11-19</time> </p>
+                    <p> Обновлено: <time>2019-11-19</time> </p>
+
             </div>
         </header>
 
@@ -168,31 +169,27 @@
 <p>А далее я приглашаю вас перестраивать мозги и учиться благоустраивать свои финансы к скорейшему переходу в это беззаботное состояние.</p>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/intro&title=Введение&description=Для кого этот сайт. Зачем нужно накапливать финансовый капитал. Историческая доходность акций. Расчёт итоговой доходности разового вложения, регулярных вложений. Сколько нужно сберегать, чтобы получить нужный доход. Через сколько лет можно достичь финансовой независимости." target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/intro" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/intro" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/intro" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/literacy"> &uarr; Грамотность &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-                <a href="/literacy/notaboutmoney"> Бережливость — это не про деньги &gt;&gt; </a>
-    </div>
+    <div class="pure-u-1-3 left"></div>
+    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/literacy/notaboutmoney"> Бережливость — это не про деньги &gt;&gt; </a></div>
     </div>
 </div>
 </div>
