--- a/literacy/notaboutmoney.html
+++ b/literacy/notaboutmoney.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="осознанность, бережливость, сбережения, инвестиции, пенсия, виды капитала, личный капитал, социальный капитал, интеллектуальный капитал, финансовый капитал, баланс" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Какие виды капитала есть у человека и зачем их накапливать. Философия экономии и сбережений. Куда вкладывать сбережения? Необходимость баланса между видами капитала." />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-01" />
         <meta property="og:article:modified_time" content="2019-11-09" />
 <meta property="og:title" content="Бережливость — это не про деньги" />
 <meta property="og:url" content="https://onfin.github.io/literacy/notaboutmoney" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Бережливость — это не про деньги</h1>
             <div class="meta">
                     <p class="description">Какие виды капитала есть у человека и зачем их накапливать. Философия экономии и сбережений. Куда вкладывать сбережения? Необходимость баланса между видами капитала.</p>
-                        <p> Обновлено: <time>2019-11-09</time> </p>
+                    <p> Обновлено: <time>2019-11-09</time> </p>
+
             </div>
         </header>
 
@@ -115,32 +115,27 @@
 </ol>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/notaboutmoney&title=Бережливость — это не про деньги&description=Какие виды капитала есть у человека и зачем их накапливать. Философия экономии и сбережений. Куда вкладывать сбережения? Необходимость баланса между видами капитала." target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/notaboutmoney" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/notaboutmoney" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/notaboutmoney" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/literacy/intro"> &lt;&lt; Введение </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/literacy"> &uarr; Грамотность &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-                <a href="/literacy/reserves"> Формирование резервов &gt;&gt; </a>
-    </div>
+    <div class="pure-u-1-3 left"><a href="/literacy/intro"> &lt;&lt; Введение </a></div>
+    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/literacy/reserves"> Формирование резервов &gt;&gt; </a></div>
     </div>
 </div>
 </div>
