--- a/literacy/reserves.html
+++ b/literacy/reserves.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="личные финансы, подушка безопасности, резервы, бюджет, страхование, пенсионные накопления" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Универсальный подход к управлению личными финансами, планированию и учёту расходов, составлению личного финансового плана и бюджета через работу с резервами. Виды и правила формирования резервов. Как оценить выгоду от страхового полиса. Что выгоднее: страховка или резерв? Как правильно копить на пенсию. Почему полисы инвестиционного и накопительного страхования (ИСЖ, НСЖ) невыгодны почти для всех." />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-31" />
         <meta property="og:article:modified_time" content="2019-11-19" />
 <meta property="og:title" content="Формирование резервов" />
 <meta property="og:url" content="https://onfin.github.io/literacy/reserves" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Формирование резервов</h1>
             <div class="meta">
                     <p class="description">Универсальный подход к управлению личными финансами, планированию и учёту расходов, составлению личного финансового плана и бюджета через работу с резервами. Виды и правила формирования резервов. Как оценить выгоду от страхового полиса. Что выгоднее: страховка или резерв? Как правильно копить на пенсию. Почему полисы инвестиционного и накопительного страхования (ИСЖ, НСЖ) невыгодны почти для всех.</p>
-                        <p> Обновлено: <time>2019-11-19</time> </p>
+                    <p> Обновлено: <time>2019-11-19</time> </p>
+
             </div>
         </header>
 
@@ -110,32 +110,27 @@
 <p>Эти программы используются обычно для сокрытия денег от судебных приставов в случае имущественных споров и тайной их передачи третьим лицам (именно потому, что уплаченная вами страховая премия — это не ваши деньги и не обязательство страховой перед вами, а ваши траты и доход страховой; обязательство же по выплате у страховой наступит только при страховом случае и только перед теми, кто указан в договоре страхования).</p>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/reserves&title=Формирование резервов&description=Универсальный подход к управлению личными финансами, планированию и учёту расходов, составлению личного финансового плана и бюджета через работу с резервами. Виды и правила формирования резервов. Как оценить выгоду от страхового полиса. Что выгоднее: страховка или резерв? Как правильно копить на пенсию. Почему полисы инвестиционного и накопительного страхования (ИСЖ, НСЖ) невыгодны почти для всех." target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/reserves" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/reserves" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/reserves" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/literacy/notaboutmoney"> &lt;&lt; Бережливость — это не про деньги </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/literacy"> &uarr; Грамотность &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-                <a href="/literacy/stocks"> Акции и их смысл &gt;&gt; </a>
-    </div>
+    <div class="pure-u-1-3 left"><a href="/literacy/notaboutmoney"> &lt;&lt; Бережливость — это не про деньги </a></div>
+    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/literacy/stocks"> Акции и их смысл &gt;&gt; </a></div>
     </div>
 </div>
 </div>
