--- a/literacy/stocks.html
+++ b/literacy/stocks.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="финансовая грамотность, фондовый рынок, акции, IPO, SPO" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Что такое акции, зачем предприятия их выпускают, как ведёт себя цена акций, почему и как их следует покупать." />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-12-07" />
         <meta property="og:article:modified_time" content="2019-12-07" />
 <meta property="og:title" content="Акции и их смысл" />
 <meta property="og:url" content="https://onfin.github.io/literacy/stocks" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Акции и их смысл</h1>
             <div class="meta">
                     <p class="description">Что такое акции, зачем предприятия их выпускают, как ведёт себя цена акций, почему и как их следует покупать.</p>
-                        <p> Обновлено: <time>2019-12-07</time> </p>
+                    <p> Обновлено: <time>2019-12-07</time> </p>
+
             </div>
         </header>
 
@@ -95,32 +95,27 @@
 <p>На что рассчитывать <em>в среднем</em>? На временно́м горизонте порядка 20 лет и больше для хорошо диверсифицированного портфеля — на доходность в размере &lt;инфляция&gt;+5%г (если сначала что-то сильно выросло, оно потом сильно провалится: примерно первые десять лет риски только растут, потом снижаются), максимальную просадку капитала — 80%, максимальную просадку дивидендного потока — 25%, время восстановления капитала из просадки — 10 лет. Это по историческим данным и с учётом инфляции. В номинальных цифрах даже просадку на 75% можно не заметить (те, кто в 2008 покупал недвижимость, не очень заметили, что она с тех пор в четыре раза обесценилась, если пересчитать в рубли на день покупки).</p>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/stocks&title=Акции и их смысл&description=Что такое акции, зачем предприятия их выпускают, как ведёт себя цена акций, почему и как их следует покупать." target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/stocks" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/stocks" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/stocks" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/literacy/reserves"> &lt;&lt; Формирование резервов </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/literacy"> &uarr; Грамотность &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-                <a href="/literacy/howto"> Пенсия своими силами. Пошаговое руководство &gt;&gt; </a>
-    </div>
+    <div class="pure-u-1-3 left"><a href="/literacy/reserves"> &lt;&lt; Формирование резервов </a></div>
+    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/literacy/howto"> Пенсия своими силами. Пошаговое руководство &gt;&gt; </a></div>
     </div>
 </div>
 </div>
