--- a/literacy/taxes.html
+++ b/literacy/taxes.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="финансовая грамотность, брокерский счёт, НДФЛ, декларация, сальдирование, вычеты, доходы, дивиденды, купоны, НКД" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Как рассчитываются и уплачиваются налоги по операциям на брокерском счёте. В каких случаях нужно рассчитывать налог самостоятельно. Когда нужно подавать декларацию и платить налог." />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-11-08" />
         <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Брокерский счёт: как рассчитываются и уплачиваются налоги" />
 <meta property="og:url" content="https://onfin.github.io/literacy/taxes" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Брокерский счёт: как рассчитываются и уплачиваются налоги</h1>
             <div class="meta">
                     <p class="description">Как рассчитываются и уплачиваются налоги по операциям на брокерском счёте. В каких случаях нужно рассчитывать налог самостоятельно. Когда нужно подавать декларацию и платить налог.</p>
-                        <p> Обновлено: <time>2019-12-29</time> </p>
+                    <p> Обновлено: <time>2019-12-29</time> </p>
+
             </div>
         </header>
 
@@ -141,32 +141,27 @@
 </ol>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/taxes&title=Брокерский счёт: как рассчитываются и уплачиваются налоги&description=Как рассчитываются и уплачиваются налоги по операциям на брокерском счёте. В каких случаях нужно рассчитывать налог самостоятельно. Когда нужно подавать декларацию и платить налог." target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/taxes" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/taxes" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/taxes" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/literacy/instruments"> &lt;&lt; Краткий обзор инструментов сбережения. Сколько и во что вкладывать </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/literacy"> &uarr; Грамотность &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-                <a href="/literacy/iis"> Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов &gt;&gt; </a>
-    </div>
+    <div class="pure-u-1-3 left"><a href="/literacy/instruments"> &lt;&lt; Краткий обзор инструментов сбережения. Сколько и во что вкладывать </a></div>
+    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/literacy/iis"> Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов &gt;&gt; </a></div>
     </div>
 </div>
 </div>
