--- a/notes/aboutme.html
+++ b/notes/aboutme.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="финансовая грамотность, сбережения, инвестиции, об авторе" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Что побудило меня заниматься «инвестициями» и почему именно таким образом" />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-17" />
         <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Кто я и как дошёл до жизни такой" />
 <meta property="og:url" content="https://onfin.github.io/notes/aboutme" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Кто я и как дошёл до жизни такой</h1>
             <div class="meta">
                     <p class="description">Что побудило меня заниматься «инвестициями» и почему именно таким образом</p>
-                        <p> Обновлено: <time>2019-12-29</time> </p>
+                    <p> Обновлено: <time>2019-12-29</time> </p>
+
             </div>
         </header>
 
@@ -75,32 +75,27 @@
 <p>Тут мне захотелось донести свою, основанную на личном опыте как сбережений, так и анализа данных и литературы, позицию. Тоже не обошлось без своего триггера, которым стала фраза представителя ЦБ на одной из таких лекций: «можно ещё в доверительное управление деньги передать, и тоже получить хорошую доходность» (на самом деле, конечно, получить можно только убытки: <a href="https://seekingalpha.com/article/3971167-target-hedge-fund-allocation-zero">статья со статистикой за последние 10 лет</a>).</p>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/aboutme&title=Кто я и как дошёл до жизни такой&description=Что побудило меня заниматься «инвестициями» и почему именно таким образом" target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/notes/aboutme" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/aboutme" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/aboutme" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/notes/workersfactories"> &lt;&lt; Фабрики — рабочим </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/notes"> &uarr; Заметки о финансах &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-                <a href="/notes/system"> Как организованы мои финансы &gt;&gt; </a>
-    </div>
+    <div class="pure-u-1-3 left"><a href="/notes/workersfactories"> &lt;&lt; Фабрики — рабочим </a></div>
+    <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/notes/system"> Как организованы мои финансы &gt;&gt; </a></div>
     </div>
 </div>
 </div>
