--- a/notes/accounting.html
+++ b/notes/accounting.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="финансовая грамотность, личные финансы, учёт и контроль, финансовая дисциплина" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Причины (мои собственные) вести учёт личных финансов и контролировать расходы. Как это делаю я и почему." />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-21" />
         <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Как и зачем я веду учёт личных финансов" />
 <meta property="og:url" content="https://onfin.github.io/notes/accounting" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Как и зачем я веду учёт личных финансов</h1>
             <div class="meta">
                     <p class="description">Причины (мои собственные) вести учёт личных финансов и контролировать расходы. Как это делаю я и почему.</p>
-                        <p> Обновлено: <time>2019-12-29</time> </p>
+                    <p> Обновлено: <time>2019-12-29</time> </p>
+
             </div>
         </header>
 
@@ -102,32 +102,27 @@
 </ol>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/accounting&title=Как и зачем я веду учёт личных финансов&description=Причины (мои собственные) вести учёт личных финансов и контролировать расходы. Как это делаю я и почему." target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/notes/accounting" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/accounting" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/accounting" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/notes/referrals"> &lt;&lt; Реферальные ссылки </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/notes"> &uarr; Заметки о финансах &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-                <a href="/notes/myportfolio"> Мой портфель ценных бумаг и стратегия использования брокерских счетов &gt;&gt; </a>
-    </div>
+    <div class="pure-u-1-3 left"><a href="/notes/referrals"> &lt;&lt; Реферальные ссылки </a></div>
+    <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/notes/myportfolio"> Мой портфель ценных бумаг и стратегия использования брокерских счетов &gt;&gt; </a></div>
     </div>
 </div>
 </div>
