--- a/notes/capital.html
+++ b/notes/capital.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="финансовая грамотность, личные финансы, потребление, капитал, страховка, финансовая свобода" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Капитал — это не только отложенное потребление, это и страховка, и финансовая свобода, и дополнительные доходы." />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-22" />
         <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Зачем нужен капитал" />
 <meta property="og:url" content="https://onfin.github.io/notes/capital" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Зачем нужен капитал</h1>
             <div class="meta">
                     <p class="description">Капитал — это не только отложенное потребление, это и страховка, и финансовая свобода, и дополнительные доходы.</p>
-                        <p> Обновлено: <time>2019-12-29</time> </p>
+                    <p> Обновлено: <time>2019-12-29</time> </p>
+
             </div>
         </header>
 
@@ -81,30 +81,27 @@
 <p>Поэтому меня раздражают рассуждения вроде «нет смысла сегодня откладывать рубль, если завтра получишь десять», или «нет смысла сберегать, если впереди всемирная катастрофа или всеобщее благоденствие», или «можно уехать в деревню — там государственной пенсии хватит». Они смотрят на капитал только как на отложенное потребление, хотя это не единственная и, может быть, даже не самая важная его роль.</p>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/capital&title=Зачем нужен капитал&description=Капитал — это не только отложенное потребление, это и страховка, и финансовая свобода, и дополнительные доходы." target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/notes/capital" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/capital" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/capital" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-    </div>
-    <div class="pure-u-1-3 center">
-    </div>
-    <div class="pure-u-1-3 right">
-                <a href="/notes/recklessness"> Безответственное отношение к деньгам &gt;&gt; </a>
-    </div>
+    <div class="pure-u-1-3 left"></div>
+    <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/notes/recklessness"> Безответственное отношение к деньгам &gt;&gt; </a></div>
     </div>
 </div>
 </div>
