--- a/notes/diversification_math/index.html
+++ b/notes/diversification_math/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="финансовая грамотность, фондовый рынок, акции, диверсификация, ребалансировка, портфель" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Рассмотрим на простой модели как из набора акций с нулевой ожидаемой доходностью получается портфель с положительной и как на его доходность влияют довложения и ребалансировки" />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-12-07" />
         <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Математика диверсификации: портфельный эффект и ребалансировка между акциями" />
 <meta property="og:url" content="https://onfin.github.io/notes/diversification_math" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Математика диверсификации: портфельный эффект и ребалансировка между акциями</h1>
             <div class="meta">
                     <p class="description">Рассмотрим на простой модели как из набора акций с нулевой ожидаемой доходностью получается портфель с положительной и как на его доходность влияют довложения и ребалансировки</p>
-                        <p> Обновлено: <time>2019-12-29</time> </p>
+                    <p> Обновлено: <time>2019-12-29</time> </p>
+
             </div>
         </header>
 
@@ -88,32 +88,27 @@
 <p>Исходники моделей: <a href="/notes/diversification_math/vol.py">рынок</a>, <a href="/notes/diversification_math/vol2.py">довложения и ребалансировка</a>.</p>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/diversification_math&title=Математика диверсификации: портфельный эффект и ребалансировка между акциями&description=Рассмотрим на простой модели как из набора акций с нулевой ожидаемой доходностью получается портфель с положительной и как на его доходность влияют довложения и ребалансировки" target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/notes/diversification_math" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/diversification_math" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/diversification_math" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/notes/marketprice"> &lt;&lt; Откуда берётся рыночная цена и доходность акций </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/notes"> &uarr; Заметки о финансах &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-                <a href="/notes/diversification_math2"> Математика диверсификации-2: доходность и риск &gt;&gt; </a>
-    </div>
+    <div class="pure-u-1-3 left"><a href="/notes/marketprice"> &lt;&lt; Откуда берётся рыночная цена и доходность акций </a></div>
+    <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/notes/diversification_math2"> Математика диверсификации-2: доходность и риск &gt;&gt; </a></div>
     </div>
 </div>
 </div>
