--- a/notes/fairprice.html
+++ b/notes/fairprice.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="экономика, справедливая цена, рыночная экономика, капитализм, социализм, государство" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Какой бедой грозит регулирование цен и зачем нужно государство, если не за этим." />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-11-24" />
         <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Справедливая цена" />
 <meta property="og:url" content="https://onfin.github.io/notes/fairprice" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Справедливая цена</h1>
             <div class="meta">
                     <p class="description">Какой бедой грозит регулирование цен и зачем нужно государство, если не за этим.</p>
-                        <p> Обновлено: <time>2019-12-29</time> </p>
+                    <p> Обновлено: <time>2019-12-29</time> </p>
+
             </div>
         </header>
 
@@ -77,32 +77,27 @@
 <p>Устремления людей в отношении как потребления, так и производства (чем и как заниматься) глубоко индивидуальны, субъективны и переменчивы. Рыночная цена при отсутствии транзакционных издержек и <strong>экстерналий</strong> (воздействий на среду, которые не учитываются при принятии экономических решений) взвешивает их все так, чтобы они были удовлетворены наилучшим образом. Никакая машина a priori рассчитать эту цену не сможет. Вот до чего мы уже договорились даже на доденежном уровне, самому удивительно.</p>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/fairprice&title=Справедливая цена&description=Какой бедой грозит регулирование цен и зачем нужно государство, если не за этим." target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/notes/fairprice" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/fairprice" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/fairprice" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/notes/diversification_math2"> &lt;&lt; Математика диверсификации-2: доходность и риск </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/notes"> &uarr; Заметки о финансах &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-                <a href="/notes/workersfactories"> Фабрики — рабочим &gt;&gt; </a>
-    </div>
+    <div class="pure-u-1-3 left"><a href="/notes/inflation"> &lt;&lt; Инфляция </a></div>
+    <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/notes/workersfactories"> Фабрики — рабочим &gt;&gt; </a></div>
     </div>
 </div>
 </div>
