--- a/notes/lifeprofile.html
+++ b/notes/lifeprofile.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="финансовая грамотность, доходы, расходы, сбережения, капитал, пенсия, обеспеченная старость" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Как будут изменяться в течение жизни доходы, расходы и капитал если делать сбережения и если их не делать." />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-11-21" />
         <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Финансовый профиль жизни обычного человека и инвестора" />
 <meta property="og:url" content="https://onfin.github.io/notes/lifeprofile" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Финансовый профиль жизни обычного человека и инвестора</h1>
             <div class="meta">
                     <p class="description">Как будут изменяться в течение жизни доходы, расходы и капитал если делать сбережения и если их не делать.</p>
-                        <p> Обновлено: <time>2019-12-29</time> </p>
+                    <p> Обновлено: <time>2019-12-29</time> </p>
+
             </div>
         </header>
 
@@ -267,32 +267,27 @@
 </script>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/lifeprofile&title=Финансовый профиль жизни обычного человека и инвестора&description=Как будут изменяться в течение жизни доходы, расходы и капитал если делать сбережения и если их не делать." target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/notes/lifeprofile" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/lifeprofile" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/lifeprofile" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/notes/finplan"> &lt;&lt; Личный финансовый план — не нужен </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/notes"> &uarr; Заметки о финансах &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-                <a href="/notes/marketprice"> Откуда берётся рыночная цена и доходность акций &gt;&gt; </a>
-    </div>
+    <div class="pure-u-1-3 left"><a href="/notes/finplan"> &lt;&lt; Личный финансовый план — не нужен </a></div>
+    <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/notes/marketprice"> Откуда берётся рыночная цена и доходность акций &gt;&gt; </a></div>
     </div>
 </div>
 </div>
