--- a/notes/marketprice.html
+++ b/notes/marketprice.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="финансовая грамотность, ценные бумаги, портфель, фондовый рынок, цена акции, рыночная доходность, фондовый индекс" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Какие факторы обеспечивали рост фондового рынка в прошлом и какие будут обеспечивать его рост в будущем. Что игнорируют как активные инвесторы, так и их противники. Почему доходность фондового рынка должна быть нулевой, и почему она такой не будет. Почему нет смысла выбирать отдельные акции для повышения доходности портфеля." />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-11-17" />
         <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Откуда берётся рыночная цена и доходность акций" />
 <meta property="og:url" content="https://onfin.github.io/notes/marketprice" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Откуда берётся рыночная цена и доходность акций</h1>
             <div class="meta">
                     <p class="description">Какие факторы обеспечивали рост фондового рынка в прошлом и какие будут обеспечивать его рост в будущем. Что игнорируют как активные инвесторы, так и их противники. Почему доходность фондового рынка должна быть нулевой, и почему она такой не будет. Почему нет смысла выбирать отдельные акции для повышения доходности портфеля.</p>
-                        <p> Обновлено: <time>2019-12-29</time> </p>
+                    <p> Обновлено: <time>2019-12-29</time> </p>
+
             </div>
         </header>
 
@@ -98,32 +98,27 @@
 <p>Итак. Несмотря на то, что некоторая (и, возможно, весьма значительная — я не представляю как это посчитать) часть прошлой доходности фондового рынка обусловлена факторами, которые уже не действуют, нынешним пассивным инвесторам ещё есть на чём получить свои 5%г реальной доходности. Во-первых, за счёт портфельного эффекта между классами и подклассами активов на более длинном временно́́м горизонте чем в среднем по рынку. Во-вторых, за счёт взрывного роста компаний на новых рынках (как это и всегда было). А вот Global Market Portfolio, в котором все активы мира взвешены по их капитализации (т.е. портфель идеального силаевского пассивного инвестора, в точности соответствующего рынку капиталов) — таки да, скорее всего будет иметь доходность околонулевую.</p>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/marketprice&title=Откуда берётся рыночная цена и доходность акций&description=Какие факторы обеспечивали рост фондового рынка в прошлом и какие будут обеспечивать его рост в будущем. Что игнорируют как активные инвесторы, так и их противники. Почему доходность фондового рынка должна быть нулевой, и почему она такой не будет. Почему нет смысла выбирать отдельные акции для повышения доходности портфеля." target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/notes/marketprice" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/marketprice" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/marketprice" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/notes/lifeprofile"> &lt;&lt; Финансовый профиль жизни обычного человека и инвестора </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/notes"> &uarr; Заметки о финансах &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-                <a href="/notes/diversification_math"> Математика диверсификации: портфельный эффект и ребалансировка между акциями &gt;&gt; </a>
-    </div>
+    <div class="pure-u-1-3 left"><a href="/notes/lifeprofile"> &lt;&lt; Финансовый профиль жизни обычного человека и инвестора </a></div>
+    <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/notes/diversification_math"> Математика диверсификации: портфельный эффект и ребалансировка между акциями &gt;&gt; </a></div>
     </div>
 </div>
 </div>
