--- a/notes/myportfolio.html
+++ b/notes/myportfolio.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="финансовая грамотность, ценные бумаги, портфель, инвестиционная стратегия" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="По каким правилам я формирую свой портфель ценных бумаг и почему именно так. Из каких бумаг он состоит. Каким образом эти бумаги распределены между брокерами и почему. Возможные направления развития потрфеля." />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-11-11" />
         <meta property="og:article:modified_time" content="2020-01-01" />
 <meta property="og:title" content="Мой портфель ценных бумаг и стратегия использования брокерских счетов" />
 <meta property="og:url" content="https://onfin.github.io/notes/myportfolio" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Мой портфель ценных бумаг и стратегия использования брокерских счетов</h1>
             <div class="meta">
                     <p class="description">По каким правилам я формирую свой портфель ценных бумаг и почему именно так. Из каких бумаг он состоит. Каким образом эти бумаги распределены между брокерами и почему. Возможные направления развития потрфеля.</p>
-                        <p> Обновлено: <time>2020-01-01</time> </p>
+                    <p> Обновлено: <time>2020-01-01</time> </p>
+
             </div>
         </header>
 
@@ -149,31 +149,27 @@
 </ol>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/myportfolio&title=Мой портфель ценных бумаг и стратегия использования брокерских счетов&description=По каким правилам я формирую свой портфель ценных бумаг и почему именно так. Из каких бумаг он состоит. Каким образом эти бумаги распределены между брокерами и почему. Возможные направления развития потрфеля." target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/notes/myportfolio" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/myportfolio" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/myportfolio" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/notes/accounting"> &lt;&lt; Как и зачем я веду учёт личных финансов </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/notes"> &uarr; Заметки о финансах &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-    </div>
+    <div class="pure-u-1-3 left"><a href="/notes/accounting"> &lt;&lt; Как и зачем я веду учёт личных финансов </a></div>
+    <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
+    <div class="pure-u-1-3 right"></div>
     </div>
 </div>
 </div>
