--- a/notes/recklessness.html
+++ b/notes/recklessness.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="финансовая грамотность, деньги, капитал, расходы, сбережения" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="«Мне не хватает денег». «Мне не нужны деньги». «Чтобы больше зарабатывать, нужно больше тратить». Хватает. Нужны. Нет. И не отмазывайтесь. Разбираем самые распространённые причины отказа от сбережений." />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-29" />
         <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Безответственное отношение к деньгам" />
 <meta property="og:url" content="https://onfin.github.io/notes/recklessness" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Безответственное отношение к деньгам</h1>
             <div class="meta">
                     <p class="description">«Мне не хватает денег». «Мне не нужны деньги». «Чтобы больше зарабатывать, нужно больше тратить». Хватает. Нужны. Нет. И не отмазывайтесь. Разбираем самые распространённые причины отказа от сбережений.</p>
-                        <p> Обновлено: <time>2019-12-29</time> </p>
+                    <p> Обновлено: <time>2019-12-29</time> </p>
+
             </div>
         </header>
 
@@ -86,32 +86,27 @@
 <p>Что делать — очевидно: не меньше 20–30% доходов идут в сбережения сразу, рост доходов должен опережать рост расходов (в относительном измерении: скажем, на рост доходов на 20% отвечаем ростом расходов на 5–10), рискуем либо уже заработанными деньгами (но в капитал не залезаем), либо чужими (которые в случае провала не надо возвращать).</p>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/recklessness&title=Безответственное отношение к деньгам&description=«Мне не хватает денег». «Мне не нужны деньги». «Чтобы больше зарабатывать, нужно больше тратить». Хватает. Нужны. Нет. И не отмазывайтесь. Разбираем самые распространённые причины отказа от сбережений." target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/notes/recklessness" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/recklessness" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/recklessness" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/notes/capital"> &lt;&lt; Зачем нужен капитал </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/notes"> &uarr; Заметки о финансах &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-                <a href="/notes/finplan"> Личный финансовый план — не нужен &gt;&gt; </a>
-    </div>
+    <div class="pure-u-1-3 left"><a href="/notes/capital"> &lt;&lt; Зачем нужен капитал </a></div>
+    <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/notes/finplan"> Личный финансовый план — не нужен &gt;&gt; </a></div>
     </div>
 </div>
 </div>
