--- a/notes/referrals.html
+++ b/notes/referrals.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="реферальные ссылки" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Ссылки на финансовые сервисы которыми я пользуюсь; если их использовать для регистрации в них, можно получить немного халявы (и мне принести)" />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-18" />
         <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Реферальные ссылки" />
 <meta property="og:url" content="https://onfin.github.io/notes/referrals" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Реферальные ссылки</h1>
             <div class="meta">
                     <p class="description">Ссылки на финансовые сервисы которыми я пользуюсь; если их использовать для регистрации в них, можно получить немного халявы (и мне принести)</p>
-                        <p> Обновлено: <time>2019-12-29</time> </p>
+                    <p> Обновлено: <time>2019-12-29</time> </p>
+
             </div>
         </header>
 
@@ -158,32 +158,27 @@
 <p>Если не нашли подходящего, тема с промокодами и приглашениями на разные прочие сервисы/банки ко взаимной выгоде есть на <a href="http://www.banki.ru/forum/?PAGE_NAME=list&amp;FID=27">форуме Склянок</a>.</p>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/referrals&title=Реферальные ссылки&description=Ссылки на финансовые сервисы которыми я пользуюсь; если их использовать для регистрации в них, можно получить немного халявы (и мне принести)" target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/notes/referrals" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/referrals" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/referrals" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/notes/system"> &lt;&lt; Как организованы мои финансы </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/notes"> &uarr; Заметки о финансах &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-                <a href="/notes/accounting"> Как и зачем я веду учёт личных финансов &gt;&gt; </a>
-    </div>
+    <div class="pure-u-1-3 left"><a href="/notes/system"> &lt;&lt; Как организованы мои финансы </a></div>
+    <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/notes/accounting"> Как и зачем я веду учёт личных финансов &gt;&gt; </a></div>
     </div>
 </div>
 </div>
