--- a/notes/workersfactories.html
+++ b/notes/workersfactories.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="ru">
@@ -12,15 +13,12 @@
         <meta name="keywords" content="экономика, фабрики рабочим, рыночная экономика, капитализм, социализм, государство" />
 
 <meta property="og:locale" content="ru" />
-
     <meta property="og:description" content="Что будет, если выгнать всех кровопийц-капиталистов, и передать производство в руки его же рабочих? Воплощаем ленинский лозунг в жизнь на простой модели." />
-
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-11-24" />
         <meta property="og:article:modified_time" content="2019-12-29" />
 <meta property="og:title" content="Фабрики — рабочим" />
 <meta property="og:url" content="https://onfin.github.io/notes/workersfactories" />
-
 
 
 
@@ -51,6 +49,7 @@
 
     <main>
 
+
 <div class="pure-g">
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
@@ -58,7 +57,8 @@
             <h1>Фабрики — рабочим</h1>
             <div class="meta">
                     <p class="description">Что будет, если выгнать всех кровопийц-капиталистов, и передать производство в руки его же рабочих? Воплощаем ленинский лозунг в жизнь на простой модели.</p>
-                        <p> Обновлено: <time>2019-12-29</time> </p>
+                    <p> Обновлено: <time>2019-12-29</time> </p>
+
             </div>
         </header>
 
@@ -71,32 +71,27 @@
 <p>Собственно говоря, вот весь наш XX век. Узнаваем и неизбежен. И кажется, что мы его уже пережили (хотя сторонников возврата к этим идеям ещё много, и к ним даже опять прислушиваются, <a href="https://www.oaktreecapital.com/docs/default-source/memos/political-reality-meets-economic-reality.pdf">даже в США</a>), но эта проблема теперь подкрадывается с другой стороны. Фондовый рынок. В развитых странах практически не осталось крупных предприятий, контроль за которыми сохранялся бы руках одного или нескольких владельцев. Они, фактически, стали принадлежать рабочим же. Но, возможно, нас спасёт то, что они принадлежат не их же рабочим. Эта модель ещё требует исследования.</p>
         </div>
         <aside>
-                <div class="share-buttons">
+            <div class="share-buttons">
         <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/workersfactories&title=Фабрики — рабочим&description=Что будет, если выгнать всех кровопийц-капиталистов, и передать производство в руки его же рабочих? Воплощаем ленинский лозунг в жизнь на простой модели." target="_blank"><i class="share">&#xea9d;</i></a>
         <a href="https://t.me/share/url?url=https://onfin.github.io/notes/workersfactories" target="_blank"><i class="share">&#xea9b;</i></a>
         <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/workersfactories" target="_blank"><i class="share">&#xea9c;</i></a>
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/workersfactories" target="_blank"><i class="share">&#xea93;</i></a>
-    </div>
 
+    </div>
         </aside>
     </article>
 </div>
 </div>
+
     </main>
 
     <footer>
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left">
-                <a href="/notes/fairprice"> &lt;&lt; Справедливая цена </a>
-    </div>
-    <div class="pure-u-1-3 center">
-                <a href="/notes"> &uarr; Заметки о финансах &uarr; </a>
-    </div>
-    <div class="pure-u-1-3 right">
-                <a href="/notes/aboutme"> Кто я и как дошёл до жизни такой &gt;&gt; </a>
-    </div>
+    <div class="pure-u-1-3 left"><a href="/notes/fairprice"> &lt;&lt; Справедливая цена </a></div>
+    <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/notes/aboutme"> Кто я и как дошёл до жизни такой &gt;&gt; </a></div>
     </div>
 </div>
 </div>
